<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/activity"
            android:text="@string/irActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/google"
            android:text="@string/irGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/alarma"
            android:text="@string/irAlarma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/llamar"
            android:text="@string/irTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/mapaGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/irGps">

        </Button>

        <Button
            android:id="@+id/temporizador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/irTemporizador">

        </Button>

    </LinearLayout>


</LinearLayout>